--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__/
 
 # C extensions
 *.so
+env
 
 # Distribution / packaging
 .Python
@@ -114,7 +115,7 @@ celerybeat.pid
 # Environments
 .env
 .venv
-env/
+.env/
 venv/
 ENV/
 env.bak/
